legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr43211.c-5.4.0-2.out.txt
pr43211.c:9:19: error: parameter 1 (‘t’) has incomplete type
 void bar(struct T t) {}  
                   ^
